--- a/views/pages/sheet/add-row.ejs
+++ b/views/pages/sheet/add-row.ejs
@@ -39,7 +39,15 @@
             <input type="text" class="form-control" id="reason"  name="reason"/>
         </div>
 
-        <button type="submit">Submit</button>
+        <div class="form-group">
+            <label for="spanning">Spanning</label><br>
+            <select name="spanning" id="spanning">
+                <option>Ja</option>
+                <option selected>Nee</option>
+            </select>
+        </div>
+
+        <button type="submit" class="btn btn-success">Submit</button>
     </form>
 </div>
 </body>
