--- a/views/pages/sheet/update-row.ejs
+++ b/views/pages/sheet/update-row.ejs
@@ -16,7 +16,7 @@
     <%- include('../../partials/navbar.ejs') %>.
 </head>
 <div class="container">
-    <h2>Rij toevoegen</h2>
+    <h2>Rij Wijzigen</h2>
     <form action="/spanning/update" method="POST">
         <div class="form-group">
             <label for="nr">Nr.</label>
